make announcments rescale on mobile, sort by id correctly

--- a/src/app/main/home/announcement/Announcement.css
+++ b/src/app/main/home/announcement/Announcement.css
@@ -68,4 +68,8 @@
     .announcement-arrow{
         padding:0px;
     }
+    .announcement-body-container{
+        max-width: 300px;
+        width:auto;
+    }
 }
